feat: modify some error messages & add doc to user routes
